--- a/index.html
+++ b/index.html
@@ -16,6 +16,6 @@
     <div class="container">
       <div class="grid" id="commandsGrid"></div>
     </div>
-    <script src="./script.js" />
+    <script src="./script.js" ></script>/>
   </body>
 </html>
